# query-collection

./: README.md  Taskfile.yaml  doap.ttl  pyproject.toml  query_collection.py  test_query_collection.py
test_assets/example_dir/: spo.rq
