[project]
name = "query-collection"
version = "0.1.6"
description = "This should be an interface and implementation of a collection that holds SPARQL 1.1 queries."
authors = [
    {name = "Natanael Arndt",email = "arndtn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0.0"
dependencies = [
    "rdflib (>=7.1.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

